# kikiri-tts

./: AGENTS.md  NOTICE  PROGRESS.md  README.md  pyproject.toml
checks/: README.MD  check_phoneme_lengths.py  readme.txt  test_monotonic_align.py
configs/: config_german_ft.yml
docs/: TRAINING_GUIDE.md  TROUBLESHOOTING.md
kokoro_de/: __init__.py  normalizer.py  overrides.py  pipeline.py  router.py
scripts/: evaluate_overrides.py  test_inference.py  triage_overrides.py
tests/: test_normalizer.py  test_router.py
