[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro-deutsch"
version = "0.3.0"
description = "German frontend and training utilities for Kokoro TTS"
readme = "README.md"
authors = [
    { name="semidark" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "huggingface_hub",
    "kokoro>=0.9.4",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "torch",
    "transformers"
]

[tool.hatch.build.targets.wheel]
only-include = ["kokoro_de"]
only-packages = true

[project.urls]
Homepage = "https://github.com/semidark/kokoro-deutsch"
Repository = "https://github.com/semidark/kokoro-deutsch"
Upstream = "https://github.com/hexgrad/kokoro"
